[project]
name = "titan-ai-trader"
version = "0.1.0"
description = "Titan AI Trader — Paper Trading Engine (Phase 1) + Market Data Engine (Phase 2)"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
